test_files/fails/s_nonstable_value_in_boxed_closure.ar
let rec foo =
    let f = \x -> x in
    let g = box (\y -> f y) in // This part should fail because f is not stable (it is a function)
    delay (adv (wait keyboard) :: foo);

console <- "" :: foo;
